# alertist

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release-drafter-config.yml  wordlist.txt
.github/workflows/: integration.yml  pypi-publish.yaml
alertist/: __init__.py  conf.py
alertist/targets/: __init__.py  abstract.py  pushover.py  syslog.py
tests/: test_pushover.py
